Updated based on sonar report.